--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,6 +1,9 @@
+# Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
 on:
-  schedule: [{cron: "0 0 * * *"}]
+  # Schedule updates (each hour)
+  schedule: [{cron: "0 * * * *"}]
+  # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
 jobs:
@@ -11,48 +14,71 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          # Your GitHub token
+          # The following scopes are required:
+          #  - public_access (default scope)
+          # The following additional scopes may be required:
+          #  - read:org      (for organization related metrics)
+          #  - read:user     (for user related data)
+          #  - read:packages (for some packages related data)
+          #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
-          user: Stone-Sys
-          template: terminal # Cambiado a terminal
+
+          # Options
+          template: terminal
           base: header, activity, community, repositories, metadata
-          config_timezone: America/Argentina/Buenos_Aires
-          
-          # Plugins que ya tenías (mantengo tu configuración)
           base_hireable: yes
+          config_timezone: America/Argentina/Buenos_Aires
           plugin_achievements: yes
           plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
+          plugin_habits: yes
+          plugin_habits_charts_type: classic
+          plugin_habits_days: 14
+          plugin_habits_facts: yes
+          plugin_habits_from: 200
+          plugin_habits_languages_limit: 8
+          plugin_habits_languages_threshold: 0%
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout_repositories: 7.5
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_ignored: javascript, html, css
           plugin_languages_limit: 8
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
-          
-          # Customización Estética Kitty + Tokyonight
+          plugin_languages_threshold: 0%
+
+          # Inyección de Estética Kitty / Tokyonight
           extras_css: |
+            /* Fondo y transparencia estilo Kitty */
             .terminal {
-              background: rgba(26, 27, 38, 0.75) !important; /* Opacity de tu kitty.conf */
+              background: rgba(26, 27, 38, 0.75) !important;
               color: #a9b1d6 !important;
               font-family: 'JetBrainsMono Nerd Font Mono', monospace !important;
-              padding: 10px !important; /* window_padding_width */
-              border-radius: 8px;
-              border: 1px solid #414868;
+              border: 1px solid #414868 !important;
+              padding: 10px !important;
+              border-radius: 8px !important;
             }
+            /* Barra superior de la ventana */
             .terminal-header {
               background: #16161e !important;
               color: #7aa2f7 !important;
+              border-bottom: 1px solid #414868 !important;
             }
-            /* Botones estilo bspwm/Tokyo */
+            /* Colores de texto (basados en tus color4 y color5) */
+            h1, h2, h3, .title { color: #bb9af7 !important; }
+            .field svg, .field i { fill: #7aa2f7 !important; color: #7aa2f7 !important; }
+            b, strong { color: #7dcfff !important; }
+            
+            /* Botones de ventana */
             .terminal-button.close { background: #f7768e !important; }
             .terminal-button.minimize { background: #e0af68 !important; }
             .terminal-button.maximize { background: #9ece6a !important; }
-            
-            /* Colores de contenido basados en tu kitty.conf */
-            h1, h2, h3 { color: #bb9af7 !important; } /* color5 */
-            .field svg { fill: #7aa2f7 !important; }  /* color4 */
-            b { color: #7dcfff !important; }          /* color6 */
 
+          # Forzar renderizado en alta resolución
           config_display: large
