--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,11 +1,12 @@
 # Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
 on:
-  # Schedule updates (each hour)
+  # Se actualiza cada hora
   schedule: [{cron: "0 * * * *"}]
-  # Lines below let you run workflow manually and on each commit
+  # Permite ejecución manual y en cada commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
+
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -14,25 +15,22 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # Your GitHub token
-          # The following scopes are required:
-          #  - public_access (default scope)
-          # The following additional scopes may be required:
-          #  - read:org      (for organization related metrics)
-          #  - read:user     (for user related data)
-          #  - read:packages (for some packages related data)
-          #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
 
-          # Options
+          # Configuración base y Template
           template: terminal
           base: header, activity, community, repositories, metadata
           base_hireable: yes
           config_timezone: America/Argentina/Buenos_Aires
+          config_display: large
+
+          # Plugin Achievements (Logros)
           plugin_achievements: yes
           plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
+
+          # Plugin Habits (Hábitos de commit)
           plugin_habits: yes
           plugin_habits_charts_type: classic
           plugin_habits_days: 14
@@ -40,6 +38,8 @@ jobs:
           plugin_habits_from: 200
           plugin_habits_languages_limit: 8
           plugin_habits_languages_threshold: 0%
+
+          # Plugin Languages (Análisis de lenguajes)
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
@@ -53,9 +53,9 @@ jobs:
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
 
-          # Inyección de Estética Kitty / Tokyonight
+          # Inyección de Estética Kitty / Tokyonight Storm
           extras_css: |
-            /* Fondo y transparencia estilo Kitty */
+            /* Fondo con opacidad de tu kitty.conf */
             .terminal {
               background: rgba(26, 27, 38, 0.75) !important;
               color: #a9b1d6 !important;
@@ -64,21 +64,20 @@ jobs:
               padding: 10px !important;
               border-radius: 8px !important;
             }
-            /* Barra superior de la ventana */
+            /* Barra superior estilo bspwm */
             .terminal-header {
               background: #16161e !important;
               color: #7aa2f7 !important;
               border-bottom: 1px solid #414868 !important;
             }
-            /* Colores de texto (basados en tus color4 y color5) */
-            h1, h2, h3, .title { color: #bb9af7 !important; }
-            .field svg, .field i { fill: #7aa2f7 !important; color: #7aa2f7 !important; }
-            b, strong { color: #7dcfff !important; }
+            /* Colores de texto mapeados de tu kitty.conf */
+            h1, h2, h3, .title { color: #bb9af7 !important; } /* color5 */
+            .field svg, .field i { fill: #7aa2f7 !important; color: #7aa2f7 !important; } /* color4 */
+            b, strong { color: #7dcfff !important; } /* color6 */
+            .command { color: #7aa2f7 !important; }
+            .prompt { color: #9ece6a !important; } /* color2 */
             
-            /* Botones de ventana */
-            .terminal-button.close { background: #f7768e !important; }
-            .terminal-button.minimize { background: #e0af68 !important; }
-            .terminal-button.maximize { background: #9ece6a !important; }
-
-          # Forzar renderizado en alta resolución
-          config_display: large
+            /* Botones de ventana con tus colores de terminal */
+            .terminal-button.close { background: #f7768e !important; } /* color1 */
+            .terminal-button.minimize { background: #e0af68 !important; } /* color3 */
+            .terminal-button.maximize { background: #9ece6a !important; } /* color2 */
