--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -55,29 +55,30 @@ jobs:
 
           # Inyección de Estética Kitty / Tokyonight Storm
           extras_css: |
-            /* Fondo con opacidad de tu kitty.conf */
-            .terminal {
+            /* 1. Fondo principal y fuente */
+            div.terminal, .terminal, body {
+              background-color: #1a1b26 !important;
               background: rgba(26, 27, 38, 0.75) !important;
               color: #a9b1d6 !important;
               font-family: 'JetBrainsMono Nerd Font Mono', monospace !important;
-              border: 1px solid #414868 !important;
-              padding: 10px !important;
-              border-radius: 8px !important;
             }
-            /* Barra superior estilo bspwm */
-            .terminal-header {
-              background: #16161e !important;
-              color: #7aa2f7 !important;
+            /* 2. Barra de título (Header) */
+            header, .terminal-header, .window-header {
+              background-color: #16161e !important;
               border-bottom: 1px solid #414868 !important;
             }
-            /* Colores de texto mapeados de tu kitty.conf */
-            h1, h2, h3, .title { color: #bb9af7 !important; } /* color5 */
-            .field svg, .field i { fill: #7aa2f7 !important; color: #7aa2f7 !important; } /* color4 */
-            b, strong { color: #7dcfff !important; } /* color6 */
-            .command { color: #7aa2f7 !important; }
-            .prompt { color: #9ece6a !important; } /* color2 */
+            /* 3. Títulos y resaltados */
+            h1, h2, h3, .title, .header { color: #bb9af7 !important; }
+            b, strong, .bold { color: #7dcfff !important; }
             
-            /* Botones de ventana con tus colores de terminal */
-            .terminal-button.close { background: #f7768e !important; } /* color1 */
-            .terminal-button.minimize { background: #e0af68 !important; } /* color3 */
-            .terminal-button.maximize { background: #9ece6a !important; } /* color2 */
+            /* 4. Prompts y comandos (Mapeo de mi kitty.conf) */
+            .command, .user { color: #7aa2f7 !important; }
+            .prompt, .host { color: #9ece6a !important; }
+            
+            /* 5. Iconos y gráficos */
+            svg, .field i { fill: #7aa2f7 !important; }
+            
+            /* 6. Botones (Cerrar, Min, Max) */
+            .terminal-button.close, .btn-close { background: #f7768e !important; }
+            .terminal-button.minimize, .btn-min { background: #e0af68 !important; }
+            .terminal-button.maximize, .btn-max { background: #9ece6a !important; }
